<resources>
    <string name="app_name">lab1</string>
    <string name="titleApp">Кости</string>
    <string name="titleRules">Правила игры</string>
    <string name="rules">По очередно 2 игрока бросают кости, если выпадает дубль, то кости бросаются снова. Выигрывает тот, кто первый наберет 100 очков.</string>
    <string name="buttonPlay">Играть</string>
    <string name="descImage">cubes</string>
    <string name="computerName">Компьютер</string>
    <string name="playerName">Игрок</string>
    <string name="botScore">0</string>
    <string name="playerScore">0</string>
    <string name="desc_img">Side cube</string>
    <string name="cup">Cup</string>
    <string name="winText">Ты победил!</string>
    <string name="loseText">Ты проиграл!</string>
    <string name="sadSmile">sadSmile</string>
    <string name="drawImg">drawImg</string>
    <string name="draw">Ничья!</string>
</resources>
