<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/playActivityLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".PlayActivity"
    android:clickable="true"
    android:focusable="true">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/computerName"
        android:textSize="36sp" />

    <TextView
        android:id="@+id/botScore"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.5"
        android:gravity="center"
        android:text="@string/botScore"
        android:textSize="36sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="top"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/firstBotCube"
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:layout_weight="1"
            android:contentDescription="@string/desc_img"
            app:srcCompat="@drawable/one"
            tools:ignore="NestedWeights" />

        <ImageView
            android:id="@+id/secondBotCube"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_weight="1"
            android:contentDescription="@string/desc_img"
            app:srcCompat="@drawable/one" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="bottom"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/firstPlayerCube"
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:layout_weight="1"
            android:contentDescription="@string/desc_img"
            app:srcCompat="@drawable/one"
            tools:ignore="NestedWeights" />

        <ImageView
            android:id="@+id/secondPlayerCube"
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:layout_weight="1"
            android:contentDescription="@string/desc_img"
            app:srcCompat="@drawable/one" />
    </LinearLayout>

    <TextView
        android:id="@+id/playerScore"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.5"
        android:gravity="center"
        android:text="@string/playerScore"
        android:textSize="36sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/playerName"
        android:textSize="36sp" />
</LinearLayout>